Add static sport-products section

--- a/sections/sport-blocks.liquid
+++ b/sections/sport-blocks.liquid
@@ -12,7 +12,7 @@
           {% if image %}
             {{
               image
-              | image_url: height: 2731, width: 4096
+              | image_url: width: 308
               | image_tag: class: 'sport-blocks--image', loading: 'lazy'
             }}
           {% endif %}
